--- a/public/style.css
+++ b/public/style.css
@@ -11,7 +11,20 @@
   .poppins{
     font-family: 'Poppins';
   }
+
+  .card{
+   
+    background-color: #fff;
+    border-radius: 0.25rem/* 4px */;
+    overflow: hidden;
+    --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+    position: relative;
+
+  }
 }
+
 
 /*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
