--- a/public/style.css
+++ b/public/style.css
@@ -23,6 +23,21 @@
     position: relative;
 
   }
+
+  .btn{
+ 
+    border-radius: 9999px;
+    padding-top: 0.5rem/* 8px */;
+    padding-bottom: 0.5rem/* 8px */;
+    padding-left: 0.75rem/* 12px */;
+    padding-right: 0.75rem/* 12px */;
+    text-transform: uppercase;
+    font-size: 0.75rem/* 12px */;
+    line-height: 1rem/* 16px */;
+    font-weight: 700;
+    cursor: pointer;
+    letter-spacing: 0.05em;
+  }
 }
 
 
